--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
     "type": "git",
     "url": "https://github.com/zeit/now/tree/master/examples/nextjs"
   },
+  "scripts": {
+    "dev": "parcel watch index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
+  },
+  "type": "module",
   "dependencies": {},
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "parcel-bundler": "^1.12.4"
   }
 }
