--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "parcel ./public/index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build ./public/index.html"
   },
   "type": "module",
   "dependencies": {},
