--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "straatemans",
   "description": "My own website",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/zeit/now/tree/master/examples/nextjs"
+    "type": "git"
   },
   "scripts": {
     "start": "parcel ./public/index.html",
@@ -14,6 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel": "^2.3.1",
+    "parcel-bundler": "^1.12.5"
   }
 }
