--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "build": "parcel build ./public/index.html"
   },
   "type": "module",
-  "dependencies": {},
+  "dependencies": {
+    "@parcel/transformer-typescript-tsc": "^2.3.1"
+  },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "parcel": "^2.3.1",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "typescript": "^4.5.5"
   }
 }
