--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "parcel": "^2.3.1",
     "parcel-bundler": "^1.12.5",
+    "sass": "^1.49.7",
     "typescript": "^4.5.5"
   }
 }
