--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "jsxImportSource": "preact"
+    "resolveJsonModule": true
   }
 }
