--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "straatemans",
-  "description": "My own website",
-  "repository": {
-    "type": "git"
-  },
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "parcel ./public/index.html",
-    "build": "parcel build ./public/index.html"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "type": "module",
   "dependencies": {
-    "@parcel/transformer-typescript-tsc": "^2.3.1"
-  },
-  "devDependencies": {
-    "parcel": "^2.3.1",
-    "parcel-bundler": "^1.12.5",
-    "sass": "^1.49.7",
-    "typescript": "^4.5.5"
+    "@next/font": "13.1.1",
+    "@stitches/react": "^1.2.8",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.4",
+    "typewriter-effect": "^2.19.0"
   }
 }
