--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-    "@stitches/react": "^1.2.8",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -19,6 +18,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
+    "sass": "^1.57.1",
     "typescript": "4.9.4",
     "typewriter-effect": "^2.19.0"
   }
